# cuda-hello-world

./: CMakeLists.txt  hello  main.cu
.github/workflows/: cuda-build.yml
